appId: com.basistheory.ThreeDSTester
---
- launchApp

# Ravelin SDK initializes correctly
- extendedWaitUntil:
    visible: "An emulator is being used to run the App."
    timeout: 60000

# Visa
- tapOn: "Token ID"
- inputText: "e4fcf3db-8bb1-4d77-93eb-b5416831f6c7" # 4200000000000003

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Challenge attempted"
- tapOn: "Clear"

# Mastercard

- tapOn: "Token ID"
- inputText: "5a337fac-00db-49c0-8fc1-4729639e40aa" #  5454545454545454

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Challenge attempted"
- tapOn: "Clear"
- stopApp