appId: com.basistheory.ThreeDSTester
---
- launchApp

# Ravelin SDK initializes correctly
- extendedWaitUntil:
    visible: "An emulator is being used to run the App."
    timeout: 60000

# Card 1
- tapOn: "Token ID"
- inputText: "548db39d-8c2a-454d-9fdc-ef2b33b61d70" # 4200000000000008 Visa
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
      visible: "Purchase authentication"
      timeout: 10000
- tapOn:
      below: "Enter your code below"
- inputText: "1234"
- tapOn: "Purchase authentication"
- tapOn: "Submit"
- assertVisible: "Challenge successful" # Challenge is successful, result will show the expected message
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "attempted" # transStatusReason is not present in ravelin response
- tapOn: "Clear"

# Card 2

- tapOn: "Token ID"
- inputText: "46cd9ebe-e6e9-4e4e-b52a-afd36058601a" #  3528000700000000 JCB
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
      visible: "Purchase authentication"
      timeout: 10000
- tapOn:
      below: "Enter your code below"
- inputText: "1234"
- tapOn: "Purchase authentication"
- tapOn: "Submit"
- assertVisible: "Challenge successful" # Challenge is successful, result will show the expected message
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "attempted" # transStatusReason is not present in ravelin response
- tapOn: "Clear"
- stopApp
