appId: com.basistheory.ThreeDSTester
---
- launchApp

# Ravelin SDK initializes correctly
- extendedWaitUntil:
    visible: "An emulator is being used to run the App."
    timeout: 60000

# Card 1
- tapOn: "Token ID"
- inputText: "03e9340f-d155-49da-81ab-fb29c5ca5f77" #  4200000000000005

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Challenge failed"
- assertVisible: "card-authentication-failed"
- tapOn: "Clear"


# Card 2

- tapOn: "Token ID"
- inputText: "4e6480b6-175a-4b0f-9faf-bc49e3a06cd3" #  4462030000000000 Visa Debit

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Challenge failed"
- assertVisible: "card-authentication-failed"
- tapOn: "Clear"
- stopApp
