appId: com.basistheory.ThreeDSTester
---
- launchApp

# Ravelin SDK initializes correctly
- extendedWaitUntil:
    visible: "An emulator is being used to run the App."
    timeout: 60000

# Card 1
- tapOn: "Token ID"
- inputText: "fddcb1c6-d538-42f0-868a-ccb520aa5c5e" #  4200000000000015

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
      visible: "Purchase authentication"
      timeout: 10000
- tapOn:
      below: "Enter your code below"
- inputText: "1234"
- tapOn: "Purchase authentication"
- tapOn: "Submit"
- assertVisible: "Challenge successful"
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "successful"
- tapOn: "Clear"

# Card 2
- tapOn: "Token ID"
- inputText: "b74cbe4a-c00f-4918-b19f-38c016dfbd77" #  4200000000000004

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
      visible: "Purchase authentication"
      timeout: 10000
- tapOn:
      below: "Enter your code below"
- inputText: "1234"
- tapOn: "Purchase authentication"
- tapOn: "Submit"
- assertVisible: "Challenge successful"
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "successful"
- tapOn: "Clear"

  # Card 3

- tapOn: "Token ID"
- inputText: "f569fe9c-f687-4525-9264-e3254ad008ac" #  4917610000000000 Visa

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
      visible: "Purchase authentication"
      timeout: 10000
- tapOn:
      below: "Enter your code below"
- inputText: "1234"
- tapOn: "Purchase authentication"
- tapOn: "Submit"
- assertVisible: "Challenge successful"
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "successful"
- tapOn: "Clear"
- stopApp