appId: com.basistheory.ThreeDSTester
---
- launchApp

# Ravelin SDK initializes correctly
- extendedWaitUntil:
    visible: "An emulator is being used to run the App."
    timeout: 60000

# Card 1
- tapOn: "Token ID"
- inputText: "73bdcbd2-eef1-4c75-8d96-7dfc412dcc96" #  4200000000000006 Visa

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Challenge unavailable"
- assertVisible: "cardholder-not-enrolled"
- tapOn: "Clear"

# Card 2

- tapOn: "Token ID"
- inputText: "55423c04-8a5c-4cba-9ac2-fdf7ac118244" #  36148900647913 Diners

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Challenge unavailable"
- assertVisible: "cardholder-not-enrolled"
- tapOn: "Clear"
- stopApp
