appId: com.basistheory.ThreeDSTester
---
- launchApp

# Ravelin SDK initializes correctly
- extendedWaitUntil:
    visible: "An emulator is being used to run the App."
    timeout: 60000

# Card 1
- tapOn: "Token ID"
- inputText: "b7073ebb-80c6-464e-b2c1-11784b94b069" #  4200000000000010 Visa

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
      visible: "Purchase authentication"
      timeout: 10000
- tapOn:
      below: "Enter your code below"
- inputText: "1234"
- tapOn: "Purchase authentication"
- tapOn: "Submit"

- assertVisible: "Challenge failed"
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "unavailable"
- assertVisible: "cardholder-not-enrolled"
- tapOn: "Clear"

# Card 2

- tapOn: "Token ID"
- inputText: "e17559b7-ab39-49cc-b6f7-eb3293ee50dd" #  6011000400000000 Discover

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
      visible: "Purchase authentication"
      timeout: 10000
- tapOn:
      below: "Enter your code below"
- inputText: "1234"
- tapOn: "Purchase authentication"
- tapOn: "Submit"

- assertVisible: "Challenge failed"
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "unavailable"
- assertVisible: "cardholder-not-enrolled"
- tapOn: "Clear"
- stopApp
