appId: com.basistheory.ThreeDSTester
---
- launchApp

# Ravelin SDK initializes correctly
- extendedWaitUntil:
    visible: "An emulator is being used to run the App."
    timeout: 60000

# Card 1
- tapOn: "Token ID"
- inputText: "f3951887-5326-4734-8cab-3d647e9fac5b" #  4100000000000003

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "Unable to create session, 3DS service responded 424"
- tapOn: "Clear"
- stopApp