appId: com.basistheory.ThreeDSTester
---
- launchApp

# Ravelin SDK initializes correctly
- extendedWaitUntil:
    visible: "An emulator is being used to run the App."
    timeout: 60000

# Card 1
- tapOn: "Token ID"
- inputText: "2deb3da0-9ebc-4732-ae93-9e91bfa269d4" #  4200000000000012 Visa

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Unable to authenticate, 3DS service responded 424"
- tapOn: "Clear"

# Card 2

- tapOn: "Token ID"
- inputText: "74ca4bfc-00ca-4a1d-8290-52a4c31fcc31" #  122000000000003 Airplus

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Unable to authenticate, 3DS service responded 424"
- tapOn: "Clear"
- stopApp
